# mta-mono

./: .gitmodules  README.md  mta-mono.sln
MonoTest/: MonoTest.csproj  Resource.cs
MonoTest/Properties/: AssemblyInfo.cs
MultiTheftAuto/: Account.cs  Audio.cs  Ban.cs  Blip.cs  Blowfish.cs  CameraMatrix.cs  ColShape.cs  Color.cs  Config.cs  Console.cs  Debug.cs  Element.cs  Event.cs  Explosion.cs  Fire.cs  Game.cs  HeatHazeSettings.cs  Marker.cs  MultiTheftAuto.cs  MultiTheftAuto.csproj  Object.cs  Ped.cs  Pickup.cs  Player.cs  PlayerACInfo.cs  PlayerModInfo.cs  RadarArea.cs  Resource.cs  Server.cs  ServerVersion.cs  Team.cs  Vector2.cs  Vector3.cs  Vehicle.cs  VehicleColor.cs  VehicleWheelsState.cs  Water.cs  Weapon.cs  World.cs
MultiTheftAuto/EventArgs/: AccountDataChangeEventArgs.cs  BanEventArgs.cs  CancelEventArgs.cs  ChatMessageEventArgs.cs  ColShapeEventArgs.cs  ConsoleEventArgs.cs  DebugMessageEventArgs.cs  ElementClickedEventArgs.cs  ElementColShapeEventArgs.cs  ElementDataChangeEventArgs.cs  ElementEventArgs.cs  ElementModelChangeEventArgs.cs  MarkerEventArgs.cs  PedCancelEventArgs.cs  PedEventArgs.cs  PedWastedEventArgs.cs  PedWeaponSwitchEventArgs.cs  PlayerBanEventArgs.cs  PlayerCancelEventArgs.cs  PlayerChangeNickEventArgs.cs  PlayerChatEventArgs.cs  PlayerClickEventArgs.cs  PlayerCommandEventArgs.cs  PlayerConnectEventArgs.cs  PlayerContactEventArgs.cs  PlayerDamageEvetArgs.cs  PlayerEventArgs.cs  PlayerLoginEventArgs.cs  PlayerLogoutEventArgs.cs  PlayerMarkerEventArgs.cs  PlayerModInfoEventArgs.cs  PlayerPickupHitEventArgs.cs  PlayerPickupUseEventArgs.cs  PlayerPrivateMessageEventArgs.cs  PlayerQuitEventArgs.cs  PlayerScreenShotEventArgs.cs  PlayerSpawnEventArgs.cs  PlayerTargetEventArgs.cs  PlayerVehicleEnterEventArgs.cs  ResourceEventArgs.cs  (+7 more)
MultiTheftAuto/Native/: Account.cs  Blip.cs  ColShape.cs  Element.cs  Event.cs  Explosion.cs  Fire.cs  Game.cs  Marker.cs  Object.cs  Ped.cs  Player.cs  RadarArea.cs  Resource.cs  Server.cs  Team.cs  Vehicle.cs  Water.cs
MultiTheftAuto/Pools/: IdentifiedPool.cs  Pool.cs
MultiTheftAuto/Properties/: AssemblyInfo.cs
MultiTheftAuto/Utils/: Disposable.cs  IIdentifyable.cs
Test/: Program.cs  Resource.cs  Test.csproj
Test/Properties/: AssemblyInfo.cs
mono-test/: CMono.cpp  CMono.h  CMonoAssembly.cpp  CMonoAssembly.h  CMonoClass.cpp  CMonoClass.h  CMonoObject.cpp  CMonoObject.h  mono-test.cpp  mono-test.vcxproj  stdafx.cpp  stdafx.h
mta-mono/: autogen.sh  configure  configure.ac  libtool  mta-mono.vcxproj  mta-mono.vcxproj.filters
mta-mono/lib/: eglib.lib  mono-2.0.lib
mta-mono/src/: CElement.cpp  CElement.h  CElementManager.cpp  CElementManager.h  CEvent.cpp  CEvent.h  CEventManager.cpp  CEventManager.h  CFunctions.cpp  CFunctions.h  CModule.cpp  CModule.h  CMonoArguments.cpp  CMonoArguments.h  CMonoClass.cpp  CMonoClass.h  CMonoCorlib.cpp  CMonoCorlib.h  CMonoDomain.cpp  CMonoDomain.h  CMonoEvent.cpp  CMonoEvent.h  CMonoFunctions.cpp  CMonoFunctions.h  CMonoFunctions_Account.cpp  CMonoFunctions_Audio.cpp  CMonoFunctions_Ban.cpp  CMonoFunctions_Blip.cpp  CMonoFunctions_Element.cpp  CMonoFunctions_Event.cpp  CMonoFunctions_Explosion.cpp  CMonoFunctions_Marker.cpp  CMonoFunctions_Object.cpp  CMonoFunctions_Ped.cpp  CMonoFunctions_Pickup.cpp  CMonoFunctions_Player.cpp  CMonoFunctions_RadarArea.cpp  CMonoFunctions_Resource.cpp  CMonoFunctions_Shape.cpp  CMonoFunctions_Team.cpp  (+26 more)
mta-mono/src/SharedUtil/: Makefile.am  SharedUtil.MonoObject.h  SharedUtil.h
mta-mono/src/extra/: CLuaArgument.cpp  CLuaArgument.h  CLuaArguments.cpp  CLuaArguments.h  CVehicleColor.cpp  CVehicleColor.h  Makefile.am  SColor.cpp  SColor.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
mta-mono/src/lua/: CLuaFunctionDefinitions.cpp  CLuaFunctionDefinitions.h  Makefile.am
