# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(mta-mono, 0.25a, kernell.it@gmail.com)
AM_INIT_AUTOMAKE([-Wall -Wno-conversion-null -Werror foreign])
AC_CONFIG_FILES([Makefile src/Makefile src/extra/Makefile src/lua/Makefile])

AM_PROG_AR

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

AC_OUTPUT

LT_INIT